<resources>
    <string name="app_name">Dylan &amp; Alice\'s Wedding</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_table_plan">Table Plan</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_photos">Photos</string>
    <string name="photos_share">We would love it if you could share your photos of the day in our shared album</string>
    <string name="photos_button">Share Your Photos</string>
    <string name="photos_url">https://photos.app.goo.gl/5aBQV3EJXHKcVvNc2</string>
    <string name="quiz_name">Guess Who: Alice, Dylan or Both?</string>
    <string name="quiz_welcome">How well do you know us? Compete against the other tables in our quiz</string>
    <string name="quiz_no_answer">You need to select something!</string>
    <string name="quiz_start">Start</string>
    <string name="quiz_submit">Submit</string>
    <string name="quiz_alice">Alice</string>
    <string name="quiz_dylan">Dylan</string>
    <string name="quiz_both">Both</string>
    <string name="quiz_result">Average Table Scores</string>
    <string name="quiz_table_choice">What table are you sat at?</string>
    <string-array name="tables">
        <item>Evening Guest</item>
        <item>Cardiff</item>
        <item>Marrakesh</item>
        <item>Mumbai</item>
        <item>Jakarta</item>
        <item>New York</item>
        <item>Paris</item>
        <item>Prague</item>
        <item>Barcelona</item>
        <item>Florence</item>
        <item>Budapest</item>
    </string-array>
    <string name="schedule_ceremony_time">1:00pm</string>
    <string name="schedule_ceremony">Wedding Ceremony</string>
    <string name="schedule_arrival_time">2:30pm</string>
    <string name="schedule_arrival">Arrival Drinks and Photographs</string>
    <string name="schedule_meal_time">4:00pm</string>
    <string name="schedule_meal">Meal</string>
    <string name="schedule_evening_time">7:00pm</string>
    <string name="schedule_evening">Evening Reception</string>
</resources>
