<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="es.anjon.dyl.wedding.fragments.HomeFragment">

        <TextView
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            style="@style/ScheduleTime"
            android:text="@string/schedule_ceremony_time" />

        <TextView
            style="@style/ScheduleActivity"
            android:text="@string/schedule_ceremony" />

        <TextView
            style="@style/ScheduleTime"
            android:text="@string/schedule_arrival_time" />

        <TextView
            style="@style/ScheduleActivity"
            android:text="@string/schedule_arrival" />

        <TextView
            style="@style/ScheduleTime"
            android:text="@string/schedule_meal_time" />

        <TextView
            style="@style/ScheduleActivity"
            android:text="@string/schedule_meal" />

        <TextView
            style="@style/ScheduleTime"
            android:text="@string/schedule_evening_time" />

        <TextView
            style="@style/ScheduleActivity"
            android:text="@string/schedule_evening" />

    </LinearLayout>

</ScrollView>
