<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_photos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.anjon.dyl.wedding.fragments.QuizFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/quiz_name" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/quiz_question_size"
        android:text="@string/quiz_welcome" />

    <LinearLayout
        android:id="@+id/table_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:textColor="@android:color/black"
            android:text="@string/quiz_table_choice" />

        <Spinner
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/quiz_question_size"
            android:entries="@array/tables" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">
        <RadioButton android:id="@+id/alice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/quiz_answer_size"
            android:text="@string/quiz_alice" />
        <RadioButton android:id="@+id/dylan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/quiz_answer_size"
            android:text="@string/quiz_dylan" />
        <RadioButton android:id="@+id/both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/quiz_answer_size"
            android:text="@string/quiz_both" />
    </RadioGroup>

    <Button
        android:id="@+id/button_quiz_submit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/quiz_submit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

</LinearLayout>
